# rapidfuzz-flutter

./: .gitmodules  CHANGELOG.md  LICENSE  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/rapidfuzz_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: rapidfuzz.podspec
ios/Classes/: rapidfuzz.c
lib/: applicable.dart  extraction.dart  rapidfuzz.dart  rapidfuzz_bindings_generated.dart  rapidfuzz_web.dart
lib/algorithms/: core.dart  token_set.dart  token_sort.dart  weighted_ratio.dart
lib/models/: extracted_result.dart
lib/ratios/: partial.dart  simple.dart
linux/: CMakeLists.txt
macos/: rapidfuzz.podspec
macos/Classes/: rapidfuzz.cpp
src/: CMakeLists.txt  rapidfuzz.c  rapidfuzz.cpp  rapidfuzz.h
test/: rapidfuzz_test.dart
windows/: CMakeLists.txt
